// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank render renders correctly with default props 1`] = `
<WithStyles(Chip)
  className="undefined"
  component="span"
  label={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  }
/>
`;

exports[`Blank render renders correctly with disabled prop as true 1`] = `
<WithStyles(Chip)
  className="undefined"
  component="span"
  label={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  }
  variant="outlined"
/>
`;

exports[`Blank render renders correctly with draggedItem 1`] = `
<WithStyles(Chip)
  className="undefined"
  component="span"
  label={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  }
/>
`;

exports[`Blank render renders correctly with draggedItem and isOver 1`] = `
<WithStyles(Chip)
  className="undefined"
  component="span"
  label={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Dog",
        }
      }
    />
  }
/>
`;
